# atruct

./: .gitignore  Cargo.toml  README.md
atruct/src/: lib.rs
atruct_internal/: Cargo.toml
atruct_internal/src/: builder.rs  lib.rs  parser.rs
atruct_internal/src/atruct_attribute/: builder.rs  parser.rs
atruct_internal/src/atruct_type/: builder.rs  parser.rs
atruct_internal/src/atruct_value/: builder.rs  mod.rs  parser.rs
atruct_macro/: Cargo.toml
atruct_macro/examples/: return_struct.rs
atruct_macro/src/: lib.rs
examples/: define_struct.rs  define_struct_of_literals.rs  define_struct_of_various_values.rs  return_in_impl.rs  struct_of_various_values.rs
src/: lib.rs
src/internals/: mod.rs
src/internals/atruct_return/: builder.rs  interpreter.rs  mod.rs  parser.rs
src/internals/atruct_value/: builder.rs  interpreter.rs  mod.rs  parser.rs  utils.rs
