[package]
name = "atruct"
version = "0.3.1"
edition = "2021"
authors = ["kanarus <kanarus786@gmail.com>"]
description = "macros for anonymous structs in Rust"
documentation = "https://docs.rs/atruct/"
homepage = "https://crates.io/crates/atruct"
repository = "https://github.com/kana-rus/atruct"
readme = "README.md"
keywords = ["anonymous-struct", "multiple-return"]
categories = ["rust-patterns"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true